fix(swagger): better docs
